--- a/frontent/src/comp/sidebar/sidebar.scss
+++ b/frontent/src/comp/sidebar/sidebar.scss
@@ -30,7 +30,7 @@
        .title {
          font-size: 20px;
           font-weight: bold;
-           color: #999;
+           color: #d4cece;
           margin-top: 45px;
           margin-bottom: 15px;
                  }
