--- a/frontent/src/comp/navbar/navbar.scss
+++ b/frontent/src/comp/navbar/navbar.scss
@@ -1,82 +1,122 @@
-.navbar {
-    height: 70px;
-    border-bottom: 0.5px solid rgb(231, 228, 228);
+.navbars {
+  height: 70px;
+  border-bottom: 0.5px solid rgb(231, 228, 228);
+  display: flex;
+  align-items: center;
+  font-size: 14px;
+  color: #555;
+  .wrapper {
+    width: 100%;
+    padding: 20px;
     display: flex;
     align-items: center;
-    font-size: 14px;
-    color: #555;
-    .wrapper {
-      width: 100%;
-      padding: 20px;
+    justify-content: space-between;
+
+    .search {
       display: flex;
       align-items: center;
-      justify-content: space-between;
-
-      .search {
-        display: flex;
-        align-items: center;
-        border: 0.5px solid lightgray;
-        padding: 3px;
-        width: 290px;
-        border-radius: 10px;
-        -webkit-border-radius: 10px;
-        -moz-border-radius: 10px;
-        -ms-border-radius: 10px;
-        -o-border-radius: 10px;
+      border: 0.5px solid lightgray;
+      padding: 3px;
+      width: 290px;
+      border-radius: 10px;
+      -webkit-border-radius: 10px;
+      -moz-border-radius: 10px;
+      -ms-border-radius: 10px;
+      -o-border-radius: 10px;
 .sicon{
-    font-size: 35px;
+  font-size: 35px;
 }
-        input {
-          border: none;
-          outline: none;
-          background: transparent;
-          height: 45px;
-          width: 250px;
-          font-size: 20px;
+      input {
+        border: none;
+        outline: none;
+        background: transparent;
+        height: 45px;
+        width: 250px;
+        font-size: 20px;
 
-          &::placeholder {
-            font-size: 19px;
-          }
+        &::placeholder {
+          font-size: 19px;
         }
       }
+    }
 
-      .items {
+    .items {
+      display: flex;
+      align-items: center;
+      margin-left: 920px;
+
+      .item {
         display: flex;
         align-items: center;
+        margin-right: 40px;
+        position: relative;
+        cursor: pointer;
 
-        .item {
+        .icon {
+          font-size: 35px;
+        }
+
+        .avatar {
+          width: 40px;
+          height: 40px;
+          border-radius: 50%;
+        }
+
+        .counter {
+          width: 15px;
+          height: 15px;
+          background-color: red;
+          border-radius: 50%;
+          color: white;
           display: flex;
           align-items: center;
-          margin-right: 40px;
-          position: relative;
-          cursor: pointer;
-
-          .icon {
-            font-size: 35px;
-          }
-
-          .avatar {
-            width: 40px;
-            height: 40px;
-            border-radius: 50%;
-          }
-
-          .counter {
-            width: 15px;
-            height: 15px;
-            background-color: red;
-            border-radius: 50%;
-            color: white;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            font-size: 10px;
-            font-weight: bold;
-            position: absolute;
-            top: -5px;
-            right: -5px;
-          }
+          justify-content: center;
+          font-size: 10px;
+          font-weight: bold;
+          position: absolute;
+          top: -5px;
+          right: -5px;
         }
       }
     }
   }
+}
+.dropdown-menu{
+//  background-color: aliceblue;
+  backdrop-filter: blur(2px);
+  // width: 300px; /* Set the desired width */
+  font-size: 14px; /* Set the desired font size */
+    // width: 200px; /* Set the desired width */
+    // max-height: 300px; /* Set the maximum height if needed */
+    // overflow-y: auto; /* Enable vertical scrolling if content exceeds the height */
+    // position: absolute;
+    // top: 100%;
+    // right: 0%;
+    // width: 200px; /* Set the desired width */
+    // max-height: 300px; /* Set the maximum height if needed */
+    // overflow-y: auto; /* Enable vertical scrolling if content exceeds the height */
+    // background-color: #fff;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+  }
+
+.dropdown-menu-item{
+  background-color: rgb(62, 163, 252);
+  color: aqua;
+  height: 50px;
+}
+.dropdown-heading {
+  font-weight: bold;
+  margin-bottom: 8px;
+}
+
+.dropdown-header {
+  padding: 8px 12px;
+  background-color: #f5f5f5;
+  color: #777777;
+  font-weight: bold;
+}
+// datagrid-header{
+//   font-size: 100px;
+// }
