--- a/frontent/src/comp/sidebar/sidebar.scss
+++ b/frontent/src/comp/sidebar/sidebar.scss
@@ -1,54 +1,56 @@
 .sidebar {
-   flex: 1;
-  border-right: 0.5px solid rgb(230, 227, 227);
-   min-height: 100vh;
-   background-color: rgb(255, 255, 255);
+  flex: 1;
+ border-right: 0.5px solid rgb(230, 227, 227);
+  min-height: 100vh;
+  background-color: rgb(255, 255, 255);
+  max-width: 300px;
 }
- .top {
-      height: 70px;
-      display: flex;
-     align-items: center;
-      justify-content: center;
+.top {
+     height: 70px;
+     display: flex;
+    align-items: center;
+     justify-content: center;
 
-   .logo {
-        font-size: 40px;
+  .logos {
+       font-size: 35px;
+        font-weight: bold;
+        color: #31734a;
+        cursor: pointer;
+      }
+        }
+    hr {
+      height: 0;
+     border: 0.5px solid rgb(230, 227, 227);
+   }
+   .center {
+     padding-left: 10px;
+        ul {
+       list-style: none;
+       margin: 0;
+        padding: 0;
+       }}
+      .titles {
+        font-size: 20px;
          font-weight: bold;
-         color: #31734a;
-       }
-         }
-     hr {
-       height: 0;
-      border: 0.5px solid rgb(230, 227, 227);
-    }
-    .center {
-      padding-left: 10px;
-         ul {
-        list-style: none;
-        margin: 0;
-         padding: 0;
-        }}
-       .title {
-         font-size: 20px;
-          font-weight: bold;
-           color: #d4cece;
-          margin-top: 45px;
-          margin-bottom: 15px;
-                 }
-      li {
-           display: flex;
-           align-items: center;
-           padding: 5px;
-          cursor: pointer;
-           &:hover {
-            background-color: #ece8ff;
-           }}
-        .icon {
-             font-size: 18px;
-             color: #82ca9d;
-           }
-          span{
-               font-size: 18px;
-               font-weight: 600;
-               color: #888;
-              margin-left: 10px;
-           }
+         color: #999;
+         margin-top: 45px;
+         margin-bottom: 15px;
+                }
+     li {
+          display: flex;
+          align-items: center;
+          padding: 5px;
+         cursor: pointer;
+          &:hover {
+           background-color: #ece8ff;
+          }}
+       .icon {
+            font-size: 18px;
+            color: #82ca9d;
+          }
+         span{
+              font-size: 18px;
+              font-weight: 600;
+              color: #888;
+            //  margin-left: 10px;
+          }
